# postcards

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ADDRESS_BOOK.md  APP.md  BATCH.md  CONSTITUTION.md  DOCKER.md  DOCTOR.md  INSTALL.md  KEYRING.md  RELEASE.md  ROBUSTNESS.md  SCHEDULE.md  TUI.md  WRITING_PLUGINS.md
postcards/: log.py  postcards.py  retry.py
postcards/_vendor/: __init__.py
postcards/_vendor/postcard_creator/: __init__.py  postcard_creator.py  token.py
postcards/addressbook/: __init__.py  models.py  paths.py  storage.py  variables.py
postcards/backend/: __init__.py  base.py  exceptions.py  messages.py  mock.py  registry.py  swissid.py
postcards/cli/: __init__.py  app.py  backend_errors.py  config_io.py  errors.py  main.py  options.py  runner.py
postcards/cli/commands/: __init__.py  accounts.py  addresses.py  app.py  batch.py  config.py  credentials.py  doctor.py  generate.py  keyring.py  legacy.py  plugins.py  preview.py  quota.py  schedule.py  send.py  status.py  templates.py  tui.py
postcards/config/: __init__.py  keyring.py  loader.py
postcards/image/: __init__.py  dimensions.py  pipeline.py
postcards/models/: __init__.py  address.py  message.py  postcard.py
postcards/plugin_chuck_norris/: postcards_chuck_norris.py
postcards/plugin_folder/: postcards_folder.py  slice_image.py
postcards/plugin_folder_yaml/: postcards_folder_yaml.py
postcards/plugin_pexels/: postcards_pexels.py
postcards/plugin_pexels/util/: pexels.py
postcards/plugin_random/: postcards_random.py
postcards/plugin_random/random_search_term/: random_search_term.py
postcards/plugin_random/util/: bing_image_scraper.py
postcards/plugins/: __init__.py  base.py  base_impl.py  context.py  errors.py  loader.py  registry.py
postcards/plugins/builtin/: __init__.py  _helpers.py  chuck_norris.py  folder.py  folder_yaml.py  local.py  pexels.py  unsplash.py  url.py
postcards/render/: __init__.py  postcard_renderer.py
postcards/schedule/: __init__.py  models.py  paths.py  runner.py  storage.py
postcards/tui/: __init__.py  app.py  screens.py  state.py
postcards/web/: __init__.py  __main__.py  app.py  service.py
scripts/: check.sh
tests/: __init__.py  conftest.py  test_addressbook_models.py  test_addressbook_paths.py  test_addressbook_storage.py  test_addressbook_variables.py  test_addresses_cli.py  test_backend_errors_cli.py  test_backend_exceptions.py  test_backend_integration.py  test_backend_selection.py  test_batch_cli.py  test_chuck_norris_keywords.py  test_cli_help.py  test_config_keyring.py  test_config_layer.py  test_dockerfile.py  test_doctor_cli.py  test_encode_decode.py  test_image_pipeline.py  test_keyring_cli.py  test_log.py  test_packaging.py  test_pexels_util.py  test_plugin_base.py  test_plugin_chuck_norris.py  test_plugin_errors.py  test_plugin_folder.py  test_plugin_folder_yaml.py  test_plugin_loader.py  test_plugin_local.py  test_plugin_pexels.py  test_plugin_registry.py  test_plugin_send_integration.py  test_plugin_unsplash.py  test_plugin_url.py  test_postcard_creator_shim.py  test_postcard_model.py  test_postcard_render.py  test_random_search_term.py  (+16 more)
