[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "postcards"
version = "2.2"
description = "A CLI for the Swiss Postcard Creator"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Andrin Bertschi" },
]
keywords = ["postcard", "swiss"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications",
]
requires-python = ">=3.12"
# M1: dependency modernization.
#
# Dropped from the legacy requirements.txt:
#   * postcard-creator (PyPI)    — replaced by the vendored shim at
#                                  postcards._vendor.postcard_creator.
#                                  The upstream package is in maintenance
#                                  mode and depends on Js2Py, cookies,
#                                  python-resize-image, pytz, tzlocal,
#                                  six, etc., which no longer install on
#                                  Python 3.12 / 3.13.
#   * Js2Py, pyjsparser          — pure-Python rewrite of
#                                  plugin_random.random_search_term.
#   * nltk                       — replaced by a regex tokenizer in
#                                  plugin_chuck_norris.
#   * pypexels                   — replaced by picsum.photos in
#                                  plugin_pexels.util.pexels.
#   * chardet, cookies, idna, urllib3, certifi, six
#                                — transitive deps of requests; pulled in
#                                  automatically by `requests`.
#   * olefile, python-resize-image, pytz, tzlocal
#                                — unused in the modernized codebase
#                                  (PIL bundles olefile; resize is done
#                                  via Pillow; tz is done via stdlib
#                                  zoneinfo; no pytz use anywhere).
#   * requests-toolbelt          — only used by the live API code path in
#                                  postcard_creator.token; the shim
#                                  raises NotImplementedError for that
#                                  path and never reaches the network.
dependencies = [
    "Pillow>=10.0",
    "PyYAML>=6.0",
    "beautifulsoup4>=4.12",
    "inflection>=0.5",
    "requests>=2.31",
]

[project.optional-dependencies]
# M1: same toolchain as M0 (ruff / mypy / pytest / pytest-cov). The
# runtime dep set now installs cleanly on 3.12 / 3.13, so
# `pip install -e ".[dev]"` works without --no-deps.
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.urls]
Homepage = "http://github.com/abertschi/postcards"
Repository = "http://github.com/abertschi/postcards"

[project.scripts]
postcards = "postcards.postcards:main"
postcards-folder = "postcards.plugin_folder.postcards_folder:main"
postcards-yaml = "postcards.plugin_folder_yaml.postcards_folder_yaml:main"
postcards-pexels = "postcards.plugin_pexels.postcards_pexels:main"
postcards-random = "postcards.plugin_random.postcards_random:main"
postcards-chuck-norris = "postcards.plugin_chuck_norris.postcards_chuck_norris:main"

# ---------------------------------------------------------------------------
# Build backend (hatchling) configuration
# ---------------------------------------------------------------------------
[tool.hatch.build.targets.wheel]
packages = [
    "postcards",
    "postcards._vendor",
    "postcards._vendor.postcard_creator",
    "postcards.plugin_chuck_norris",
    "postcards.plugin_folder",
    "postcards.plugin_folder_yaml",
    "postcards.plugin_pexels",
    "postcards.plugin_pexels.util",
    "postcards.plugin_random",
    "postcards.plugin_random.random_search_term",
    "postcards.plugin_random.util",
]

[tool.hatch.build.targets.wheel.force-include]
"postcards/template_config.json" = "postcards/template_config.json"
"postcards/template_config_advanced.json" = "postcards/template_config_advanced.json"
"postcards/plugin_chuck_norris/chuck_norris_jokes.json" = "postcards/plugin_chuck_norris/chuck_norris_jokes.json"
"postcards/plugin_random/random_search_term/random.html" = "postcards/plugin_random/random_search_term/random.html"
"postcards/plugin_random/random_search_term/random.js" = "postcards/plugin_random/random_search_term/random.js"

[tool.hatch.build.targets.sdist]
include = [
    "postcards",
    "tests",
    "scripts",
    "docs",
    ".github",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
    ".gitignore",
]
exclude = [
    ".venv",
    ".venv-312",
    ".venv-*",
    "dist",
    "build",
    ".ruff_cache",
    ".mypy_cache",
    ".pytest_cache",
    "__pycache__",
]

# ---------------------------------------------------------------------------
# Ruff: lint + format
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [
    "tmp",
    "tmp-pic",
    "dist",
    "build",
    ".venv",
    "venv",
]

[tool.ruff.lint]
# M1: the legacy-package lint exemption is removed; the gate runs
# `ruff check .` against the entire ``postcards/`` tree.
select = ["E", "W", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = [
    "E501",  # line length (handled by formatter)
    "B008",  # function call in default argument (argparse idiom)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = false

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
# M1: the legacy-package mypy exemption is removed. ``tests/*`` keeps
# its strict override below.
ignore_missing_imports = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = false
show_error_codes = true
exclude = [
    "tmp/",
    "dist/",
    "build/",
    ".venv/",
]

[[tool.mypy.overrides]]
# Strict on tests/ — they are new code and must be well-typed.
module = "tests.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_unused_ignores = true
check_untyped_defs = true

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=postcards",
    "--cov-report=term-missing",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["."]
filterwarnings = [
    "error",
    # The legacy package's third-party shims (e.g. ``urllib`` alias of
    # submodules) may trigger deprecation warnings; address them in
    # later milestones.
    "ignore::DeprecationWarning:postcards.*",
]

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["postcards"]
omit = [
    "postcards/plugin_chuck_norris/*",
    "postcards/plugin_random/*",
    "tmp/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 0